src/Log4JDash.Web/assets/my/css/log.css
header {
    height: 5em;
}

header h1 {
    font-weight: bold;
    font-size: 3em;
    padding: 0.33em 0 0.33em 0.5em;
}

.log-latest a {
    text-decoration: none;
    font-size: 0.75em;
}

main {
    padding: 0 0.5em 0.5em 0.5em;
    line-height: 1.2em;
}

.editor {
    display: inline-block;
}

.editor > label {
    display: block;
}
.editor > .editor-input {
    display: block;
}

.log-query {
    position: fixed;
    top: 0;
    right: 0;

    background-color: white;

    padding: 0.25em 0.5em;

    border-color: lightgray;
    border-width: 0.1em;
    border-left-style: solid;
    border-bottom-style: solid;
    -ms-border-radius: 0 0 0 0.5em;
    border-radius: 0 0 0 0.5em;
}

.log-query-source {
    float: right;
}

.log-list {
    list-style-type: none;
    padding-left: 0;
}

.log-item {
    padding: 0.1em 0 0.2em 0;
    border-top: 1px solid black;
}

.log-item-field {
    display: block;
}

.log-item-field > label {
    color: #606060
}

.log-item-collapsed {
    display: none;
}
.log-item-collapse {
    display: inline-block;
    vertical-align: text-top;
    width: 100%;
}
.log-item-collapse-content {
    display: table-cell;
}

label[for^='log-item-collapsed'] {
    display: table-cell;
    height: 1.2em;
    width: 1.2em;
    vertical-align: top;
    text-align: center;
    cursor: pointer;
    font-weight: bold;
}
label[for^='log-item-collapsed'] .log-item-collapsed-close,
.log-item-collapsed:checked + .log-item-collapse .log-item-collapsed-open {
    display: inline;
}
label[for^='log-item-collapsed'] .log-item-collapsed-open,
.log-item-collapsed:checked + .log-item-collapse .log-item-collapsed-close {
    display: none;
}

.log-item-collapsed:checked + .log-item-collapse .log-item-field {
    padding-left: 0.25em;
}
.log-item-collapsed:checked + .log-item-collapse .log-item-field:first-child {
    padding-left: 0;
}

.log-item-collapsed:checked + .log-item-collapse .log-item-field,
.log-item-collapsed:checked + .log-item-collapse label[for^='log-item-collapsed'],
.log-item-collapsed:checked + .log-item-collapse .log-item-collapse-content {
    display: table-cell;
    white-space: nowrap;
}

.log-item-collapsed:checked + .log-item-collapse .log-item-field label {
    display: none;
}
.log-item-collapsed:checked + .log-item-collapse .log-item-timestamp::after {
    content: ':';
}
.log-item-collapsed:checked + .log-item-collapse .log-item-logger::before {
    content: '[';
}
.log-item-collapsed:checked + .log-item-collapse .log-item-logger::after {
    content: ']';
}
.log-item-collapsed:checked + .log-item-collapse .log-item-message {
    white-space: normal;
}

.log-item-collapsed:checked + .log-item-collapse .log-item-field,
.log-item-collapsed:checked + .log-item-collapse *::after,
.log-item-collapsed:checked + .log-item-collapse *::before {
    vertical-align: top;
}

.log-item-collapsed:checked + .log-item-collapse .log-item-field > span {
    display: inline-block;
    max-height: 3em;
    overflow-y: hidden;
}

.log-item-collapsed:checked + .log-item-collapse .log-item-field.log-item-thread,
.log-item-collapsed:checked + .log-item-collapse .log-item-field.log-item-level,
.log-item-collapsed:checked + .log-item-collapse .log-item-field.log-item-throwable *,
.log-item-collapsed:checked + .log-item-collapse .log-item-field.log-item-property {
    display: none;
}
.log-item-throwable::after {
    content: '[exception]';
    display: none;
}
.log-item-collapsed:checked + .log-item-collapse .log-item-throwable::after {
    display: inline;
}

.log-item-timestamp-date::after {
    content: 'T';
    -ms-opacity: 0.25;
    opacity: 0.25;
}

.log-item-message > span,
.log-item-throwable > span,
.log-item-property > span {
    white-space: pre-wrap;
}

.log-item-debug {
    background-color: #dddddd;
}
.log-item-info {
    background-color: #bbffbb;
}
.log-item-warn {
    background-color: #ffffbb;
}
.log-item-error {
    background-color: #ffbbbb;
}
.log-item-fatal {
    background-color: #444;
}
.log-item-fatal * {
    color: #fff;
}

